// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should return loader view (visible false) 1`] = `
<DocumentFragment>
  <img
    alt="loading..."
    class="loader "
    height="30"
    src="loader.svg"
    width="30"
  />
</DocumentFragment>
`;

exports[`Should return loader view (visible true) 1`] = `
<DocumentFragment>
  <img
    alt="loading..."
    class="loader loader_visible"
    height="30"
    src="loader.svg"
    width="30"
  />
</DocumentFragment>
`;
